# serializer version: 1
# name: test_translator_with_immediate_pass
  list([
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true, "c": 1234 }',
    }),
  ])
# ---
# name: test_translator_with_invalid_json
  list([
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello" "b": true }',
    }),
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
        dict({
          'content': '{ "a": "hello" "b": true }',
          'role': 'assistant',
        }),
        dict({
          'content': '''
            
            The above JSON object is invalid for the following reason:
            '''
            Error: expected `,` or `}` at line 1 column 16
            
            Attempted to parse:
            
            { "a": "hello" "b": true }
            '''
            Provide a new JSON object that fixes the error.
  
          ''',
          'role': 'system',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello" "b": true, "c": 1234 }',
    }),
  ])
# ---
# name: test_translator_with_single_failure
  list([
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true }',
    }),
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
        dict({
          'content': '{ "a": "hello", "b": true }',
          'role': 'assistant',
        }),
        dict({
          'content': '''
            
            The above JSON object is invalid for the following reason:
            '''
            Validation path `c` failed for value `{"a": "hello", "b": true}` because:
              Field required
            '''
            Provide a new JSON object that fixes the error.
  
          ''',
          'role': 'system',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true, "c": 1234 }',
    }),
  ])
# ---
# name: test_translator_with_single_failure_and_list_preamble_1
  list([
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': 'Hey, I need some stuff.',
          'role': 'user',
        }),
        dict({
          'content': 'Okay, what kind of stuff?',
          'role': 'assistant',
        }),
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true }',
    }),
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': 'Hey, I need some stuff.',
          'role': 'user',
        }),
        dict({
          'content': 'Okay, what kind of stuff?',
          'role': 'assistant',
        }),
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
        dict({
          'content': '{ "a": "hello", "b": true }',
          'role': 'assistant',
        }),
        dict({
          'content': '''
            
            The above JSON object is invalid for the following reason:
            '''
            Validation path `c` failed for value `{"a": "hello", "b": true}` because:
              Field required
            '''
            Provide a new JSON object that fixes the error.
  
          ''',
          'role': 'system',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true, "c": 1234 }',
    }),
  ])
# ---
# name: test_translator_with_single_failure_and_str_preamble
  list([
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': 'Just so you know, I need some stuff.',
          'role': 'user',
        }),
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true }',
    }),
    dict({
      'kind': 'CLIENT REQUEST',
      'payload': list([
        dict({
          'content': 'Just so you know, I need some stuff.',
          'role': 'user',
        }),
        dict({
          'content': '''
            
            You are a service that translates user requests into JSON objects of type "ExampleABC" according to the following TypeScript definitions:
            ```
            interface ExampleABC {
                a: string;
                b: boolean;
                c: number;
            }
            
            ```
            All JSON objects must have 2 spaces of indentation and no properties with the value undefined:
  
          ''',
          'role': 'system',
        }),
        dict({
          'content': 'Get me stuff.',
          'role': 'user',
        }),
        dict({
          'content': '{ "a": "hello", "b": true }',
          'role': 'assistant',
        }),
        dict({
          'content': '''
            
            The above JSON object is invalid for the following reason:
            '''
            Validation path `c` failed for value `{"a": "hello", "b": true}` because:
              Field required
            '''
            Provide a new JSON object that fixes the error.
  
          ''',
          'role': 'system',
        }),
      ]),
    }),
    dict({
      'kind': 'MODEL RESPONSE',
      'payload': '{ "a": "hello", "b": true, "c": 1234 }',
    }),
  ])
# ---
